# Weather_Forecast

./: CMakeLists.txt  README.md
lib/: API.hpp  CMakeLists.txt  Config.hpp  Console.hpp  Forecast.hpp  Weather.hpp  cfg.json
